--- a/.dvc/config
+++ b/.dvc/config
@@ -2,3 +2,6 @@
     remote = ssh-storage
 ['remote "ssh-storage"']
     url = ssh://data_srv@192.168.1.46/opt/datasets
+    password = 0206
+    user = ivan
+    port = 22
